separation of kollapp user registration and organization creation